# csv-extractor

./: .env.example  example.csv  example_config.yaml  pyproject.toml  states.json  well_58-32.yaml
csv_extractor/: __main__.py  config.py  extractor.py
